--- a/css/header-style.css
+++ b/css/header-style.css
@@ -8,11 +8,11 @@
 .header {
   width: 100%;
   height: 60px;
-  max-width: 1000px;
+  max-width: 1120px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 0.5rem 2rem 0 2rem;
   align-items: center;
 }
 .header img {
