--- a/css/sections-style.css
+++ b/css/sections-style.css
@@ -8,6 +8,9 @@
   margin: 0 auto;
   padding: 2rem 1rem 2rem 1rem;
 }
+.section h3 {
+  color: var(--black);
+}
 
 /* SectionTitle */
 .section-title {
