--- a/css/styles.css
+++ b/css/styles.css
@@ -20,15 +20,14 @@ body {
 }
 #bg-div {
   position: fixed;
-  top: 0;
-  z-index: -2;
-  height: 100vh; /* h-screen */
-  width: 100vw; /* w-screen */
-  transform: rotate(180deg);
-  background-color: white;
-  background-image: radial-gradient(
-    60% 120% at 50% 50%,
-    hsla(0, 100%, 48%, 0) 0%,
-    rgba(206, 236, 255, 0.218) 100%
+  inset: 0;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  background: #ffffff;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(250, 250, 250, 1) 100%
   );
 }
